Corrected desktop footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ footer .footer-content p {
 }
 
 footer #contact{
+  width:100%;
   text-align: center;
   font-size: 3em;
   margin: 0.5em 0;
@@ -604,7 +605,7 @@ footer .copyright p {
   }
 
   #about,
-  #contact {
+  #consider {
     max-width: 750px;
   }
 
